@@ -38,7 +38,8 @@ fi
 
 rsync_cmd="$rsync -avP -e ssh"
 localdir="@abs_top_builddir@/doc/html/"
-remotedir="htdocs/doc/@PACKAGE_TARNAME@/$VERSION"
+pkgname=$(echo '@PACKAGE_TARNAME@' | sed 's|^roboptim-||')
+remotedir="htdocs/doc/$pkgname/$VERSION"
 rsync_loghost="$SF_USERNAME,roboptim@web.sourceforge.net:"
 
 echo "Fixing local rights.";
@@ -48,8 +49,6 @@ find "$localdir" -type f -print0 | xargs -0 chmod 644
 
 echo "Uploading documentation to SourceForge server.";
 $rsync_cmd "$localdir" "$rsync_loghost$remotedir"
-#echo "Fixing documentation rights.";
-#echo "cd \"$remotedir\"; chmod 644 *" | $rsync_cmd "$rsync_loghost$remotedir"
 ret="$?";
 if test 0 -eq "$ret"; then
  echo "Done. Exiting";
